--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,12 @@ services:
   flask:
     build:
       context: ./bin/flask
-    image: arjun009/WorldMap:1.0.0
+    image: arjun009/world_map:1.0.0
     container_name: "WorldMap-flask"
     restart: "always"
     ports:
       - "${FLASK_PORT}:5000"
-    volumes:
-      - ${FLASK_DIR-./web}:/usr/share/WorldMap/
     working_dir: /usr/share/WorldMap/
     environment:
       FLASK_ENV: ${FLASK_ENV}
+    command: "python3 app.py"
